# full_users_fastapi

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05849b7e0848_add_userprofile.py  1862ef7f291d_完善的用户表和用户资料表.py  2fa9278af86f_fix.py  51629235b806_test.py  87e2fefebd6b_fix_bugs.py  d7b5a8cf3cf2_add_system_params_table1.py  edb25639d967_add_system_params_table.py  ee5af7172a47_add_system_params_table.py
app/: app.py
app/api/: deps.py
app/api/v1/: auth.py  routes.py  user.py
app/api/v1/endpoints/: __init__.py
app/api/v1/endpoints/auth/: __init__.py  auth.py
app/api/v1/endpoints/system/: __init__.py  system.py
app/api/v1/endpoints/user/: secret_key.py  user.py
app/api/v1/extends/: __init__.py  sms.py
app/api/v2/: __init__.py
app/core/: __init__.py  config.py  custom_logger.py  deps.py  event.py  events.py  mysql_db.py  redis_db.py  security.py  utils.py
app/crud/: __init__.py  auth.py  base_crud.py  secret_key.py  user.py
app/crud/extends/: __init__.py  tencent_sms.py
app/crud/system/: __init__.py  system_params.py
app/crud/user/: __init__.py  secret_key.py  user.py
app/db/: __init__.py  postgresql_db.py  redis_db.py
app/middleware/: __init__.py  log_middleware.py
app/models/: __init__.py  base_model.py  secret_key.py  timestamps.py  user.py
app/models/extends/: __init__.py
app/models/system/: __init__.py  system_params.py
app/models/user/: __init__.py  user.py  user_enum.py  user_profile.py
app/schemas/: form_models.py  secret_key.py  system.py  user.py
app/services/: __init__.py  authentication_service.py
app/tasks/: __init__.py
tests/: __init__.py  test-pwd.py  test_read_user_me.py
